--- a/serverless.yml
+++ b/serverless.yml
@@ -33,7 +33,7 @@ provider:
   # under process.env.
   environment:
     tableName: ${self:custom.tableName}
-    
+
   # 'iamRoleStatement' defines the permission policy for the Lambda function.
   # In this case Lambda functions are granted with permissions to access DynamoDB.
   iamRoleStatements:
@@ -119,3 +119,5 @@ functions:
 resources:
   # DynamoDB
   - ${file(resources/dynamodb-table.yml)}
+  # S3
+  - ${file(resources/s3-bucket.yml)}
